[package]
name = "crypto-prices-lib"
version = "0.1.0"
edition = "2021"
description = "A SDK for getting prices of cryptocurrencies against another."
documentation = "https://github.com/zackbalbin/crypto-prices-lib/blob/master/README.md"
repository = "https://github.com/zackbalbin/crypto-prices-lib"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest         = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"